--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,9 @@ LICENSE file in the root directory of this source tree.
       <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
 
       <div class="fb-send-to-messenger" 
-        messenger_app_id='APP_ID'
-        page_id='PAGE_ID'
-        data-ref="PASS_THROUGH_PARAM" 
+        messenger_app_id='446537312365699'
+        page_id='EAAGWH5Hh7IMBAEi6JzNDE0zLOVz4ypgRDPRCuHdvILWQkIBBfm8kUjqe0XsZANThp8JZA3PpZBV0JZAhsyyDF5N8jjRyBkP9kkSIl8zDJJhmoRX2XMKjcxzoz7CjE9sfOPZB7AZCz9XbOJ16ZCNojHboffcZCaOF89QXxKO3TT4IRwZDZD'
+        data-ref="boing"
         color="blue" 
         size="standard">
       </div>
@@ -48,8 +48,8 @@ LICENSE file in the root directory of this source tree.
       <p>The "Message Us" plugin takes the user directly to Messenger and into a thread with your Page.</p>
 
       <div class="fb-messengermessageus" 
-        messenger_app_id='APP_ID'
-        page_id='PAGE_ID'
+        messenger_app_id='446537312365699'
+        page_id='EAAGWH5Hh7IMBAEi6JzNDE0zLOVz4ypgRDPRCuHdvILWQkIBBfm8kUjqe0XsZANThp8JZA3PpZBV0JZAhsyyDF5N8jjRyBkP9kkSIl8zDJJhmoRX2XMKjcxzoz7CjE9sfOPZB7AZCz9XbOJ16ZCNojHboffcZCaOF89QXxKO3TT4IRwZDZD'
         color="blue"
         size="standard">
       </div>
