--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ LICENSE file in the root directory of this source tree.
     <script>
       window.fbAsyncInit = function() {
         FB.init({
-          appId: 'APP_ID',
+          appId: '446537312365699',
           xfbml: true,
           version: 'v2.6'
         });
