--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,25 @@ LICENSE file in the root directory of this source tree.
          js.src = "//connect.facebook.net/en_US/sdk.js";
          fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
+
+
+
+      window.extAsyncInit  = function() {
+        MessengerExtensions.getUserID(function success(uids){
+          console.log('userId : ' + uids.psid);
+        }, function(err, errorMessage){
+          console.log(err);
+          console.log('errorMessage : ' + errorMessage);
+        });
+      };
+
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.com/en_US/messenger.Extensions.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'Messenger'));
     </script>
 
     <h1>Messenger Demo</h1>
