--- a/public/index.html
+++ b/public/index.html
@@ -12,25 +12,67 @@ LICENSE file in the root directory of this source tree.
     <title>Messenger Demo</title>
   </head>
   <body>
-    <script src="https://connect.facebook.net/en_US/fbinstant.3.0.js"></script>
     <script>
-        window.onload = function(){
-            FBInstant.initializeAsync().then(function()
-            {
-                var locale = FBInstant.getLocale(); // 'en_US'
-                var platform = FBInstant.getPlatform(); // 'iOS', 'android' or 'web'
-                var sdkVersion = FBInstant.getSDKVersion(); // '2.0'
-                console.log("FBInstant.player.getID : " + FBInstant.player.getID());
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId: '446537312365699',
+          xfbml: true,
+          version: 'v2.6'
+        });
+      };
 
-                FBInstant.startGameAsync().then(function()
-                {
-                    console.log("FBInstant.startGameAsync");
-                }).catch(function(e){
-                    // Client doesn't support rich gameplay features
-                    alert("Messages won't appear in conversation.");
-                });
-            });
-        };
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+
+
+
+      window.extAsyncInit  = function() {
+        MessengerExtensions.getUserID(function success(uids){
+          console.log('userId : ' + uids.psid);
+        }, function(err, errorMessage){
+          console.log(err);
+          console.log('errorMessage : ' + errorMessage);
+        });
+      };
+
+      (function(d, s, id){
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) {return;}
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.com/en_US/messenger.Extensions.js";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'Messenger'));
     </script>
+
+    <h1>Messenger Demo</h1>
+
+    <div>
+      <p>The "Send to Messenger" plugin will trigger an authentication callback to your webhook.</p>
+
+      <div class="fb-send-to-messenger"
+           messenger_app_id='APP_ID'
+           page_id='PAGE_ID'
+           data-ref="PASS_THROUGH_PARAM"
+           color="blue"
+           size="standard">
+      </div>
+    </div>
+
+    <div>
+      <p>The "Message Us" plugin takes the user directly to Messenger and into a thread with your Page.</p>
+
+      <div class="fb-messengermessageus"
+           messenger_app_id='APP_ID'
+           page_id='PAGE_ID'
+           color="blue"
+           size="standard">
+      </div>
+    </div>
+
   </body>
 </html>
